@startuml

package core {
    interface ICrateService
    interface IRepositoryService

    interface ICoreService {
        addFileEntity()
        addFolderEntity()
        changeEntityIdentifier()
        deleteEntity()
        getContextService()
        getMetadataService()
    }

    interface IPersistenceAdapter {
        getMetadataGraph()
        getMetadataContext()
        updateMetadataGraph()
        updateMetadataContext()
    }

    ICoreService --> ICrateService
    ICoreService *-- IContextService
    ICoreService *-- IMetadataService

    interface IContextService {
        - context
        + events
        getSpecification()
        getUsesFallback()
        getCustomContextPairs()
        removeCustomContextPair()
        addCustomContextPair()
    }

    interface IContextResolverService {
        resolve(id)
        reverse(id)
    }

    IContextResolverService "resolver" --* IContextService

    interface IMetadataService {
        - graph
        + events

        getEntities()
        addEntity()
        updateEntity()
        changeEntityIdentifier()
        deleteEntity()
    }

    class CrateFactory {
        createEmptyCrate(name, description)
        createCrateFromFile()
        createCrateFromFiles()
        createCrateFromMetadataFile()
    }

    IPersistenceAdapter <-- IMetadataService
    IPersistenceAdapter <-- IContextService
    IPersistenceAdapter --> ICrateService
    IRepositoryService <-- CrateFactory
}

@enduml